[package]
name = "map_editor"
version = "0.1.0"
authors = ["Dustin Carlino <dabreegster@gmail.com>"]
edition = "2018"

[features]
default = ["widgetry/native-backend"]
wasm = ["widgetry/wasm-backend"]

[dependencies]
aabb-quadtree = "0.1.0"
abstio = { path = "../abstio" }
abstutil = { path = "../abstutil" }
geom = { path = "../geom" }
log = "0.4.11"
map_gui = { path = "../map_gui" }
map_model = { path = "../map_model" }
widgetry = { path = "../widgetry" }
