[package]
name = "map_editor"
version = "0.1.0"
authors = ["Dustin Carlino <dabreegster@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = ["map_gui/native", "widgetry/native-backend"]
wasm = ["getrandom/js", "map_gui/wasm", "wasm-bindgen", "widgetry/wasm-backend"]

[dependencies]
aabb-quadtree = "0.1.0"
abstio = { path = "../abstio" }
abstutil = { path = "../abstutil" }
geom = { path = "../geom" }
getrandom = { version = "0.2.3", optional = true }
log = "0.4.14"
map_gui = { path = "../map_gui" }
map_model = { path = "../map_model" }
sim = { path = "../sim" }
wasm-bindgen = { version = "0.2.70", optional = true }
widgetry = { path = "../widgetry" }
