[package]
name = "map_gui"
version = "0.1.0"
authors = ["Dustin Carlino <dabreegster@gmail.com>"]
edition = "2021"

[features]
native = ["built", "subprocess", "widgetry/native-backend"]
wasm = ["wasm-bindgen", "web-sys", "widgetry/wasm-backend"]
# A marker to use a named release from S3 instead of dev for updating files
release_s3 = []

[dependencies]
aabb-quadtree = "0.1.0"
abstio = { path = "../abstio" }
abstutil = { path = "../abstutil" }
anyhow = { workspace = true }
built = { version = "0.5.0", optional = true, features=["chrono"] }
chrono = "0.4.15"
colorous = "1.0.3"
contour = { workspace = true }
flate2 = "1.0.20"
futures-channel = { version = "0.3.12"}
geojson = { workspace = true }
geom = { path = "../geom" }
instant = { workspace = true }
lazy_static = "1.4.0"
log = { workspace = true }
lyon = "1.0.0"
map_model = { path = "../map_model" }
regex = "1.5.5"
rfd = "0.8.0"
serde = { workspace = true }
sim = { path = "../sim" }
synthpop = { path = "../synthpop" }
structopt = { workspace = true }
subprocess = { git = "https://github.com/hniksic/rust-subprocess", optional = true }
wasm-bindgen = { workspace = true, optional = true }
web-sys = { workspace = true, optional = true }
widgetry = { path = "../widgetry" }
fs-err = { workspace = true }

[build-dependencies]
built = "0.5.0"
