[package]
name = "map_gui"
version = "0.1.0"
authors = ["Dustin Carlino <dabreegster@gmail.com>"]
edition = "2021"

[features]
native = ["built", "subprocess", "widgetry/native-backend"]
wasm = ["wasm-bindgen", "web-sys", "widgetry/wasm-backend"]
# A marker to use a named release from S3 instead of dev for updating files
release_s3 = []

[dependencies]
abstio = { path = "../abstio" }
abstutil = { path = "../abstutil" }
anyhow = { workspace = true }
built = { version = "0.7.1", optional = true, features=["chrono"] }
chrono = "0.4.31"
colorous = { workspace = true }
contour = { workspace = true }
flate2 = { workspace = true }
futures-channel = { workspace = true }
geojson = { workspace = true }
geom = { path = "../geom" }
instant = { workspace = true }
log = { workspace = true }
lyon = "1.0.1"
map_model = { path = "../map_model" }
regex = "1.10.2"
rfd = "0.11.3"
serde = { workspace = true }
synthpop = { path = "../synthpop" }
structopt = { workspace = true }
subprocess = { git = "https://github.com/hniksic/rust-subprocess", optional = true }
wasm-bindgen = { workspace = true, optional = true }
web-sys = { workspace = true, optional = true }
widgetry = { path = "../widgetry" }
fs-err = { workspace = true }

[build-dependencies]
built = { version = "0.7.1", features=["chrono"] }
