[package]
name = "map_model"
version = "0.1.0"
authors = ["Dustin Carlino <dabreegster@gmail.com>"]
edition = "2018"

[dependencies]
abstio = { path = "../abstio" }
abstutil = { path = "../abstutil" }
anyhow = "1.0.38"
enumset = { version = "1.0.3", features=["serde"] }
fast_paths = { git = "https://github.com/easbar/fast_paths", branch = "settled_nodes_limit" }
geom = { path = "../geom" }
kml = { path = "../kml" }
log = "0.4.14"
md5 = "0.7.0"
nbez = "0.1.0"
petgraph = { version = "0.6.0", features=["serde-1"] }
rand = "0.8.3"
rand_xorshift = "0.3.0"
serde = "1.0.123"
serde_json = "1.0.61"
strum = "0.21"
strum_macros = "0.21"
thread_local = "1.1.2"
traffic_signal_data = { path = "../traffic_signal_data" }
