[package]
name = "map_model"
version = "0.1.0"
authors = ["Dustin Carlino <dabreegster@gmail.com>"]
edition = "2021"

[dependencies]
abstio = { path = "../abstio" }
abstutil = { path = "../abstutil" }
anyhow = { workspace = true }
enumset = { version = "1.0.12", features=["serde"] }
fast_paths = { git = "https://github.com/easbar/fast_paths", rev = "9a954e02f01ed16939d3c4a2dc9dd3fb4f6c03ee"}
geojson = { workspace = true }
geom = { path = "../geom" }
kml = { path = "../kml" }
log = { workspace = true }
lyon = "1.0.1"
md5 = "0.7.0"
petgraph = { version = "0.6.3", features=["serde-1"] }
popgetter = { git = "https://github.com/dabreegster/popgetter/" }
rand = { workspace = true }
rand_xorshift = { workspace = true }
raw_map = { path = "../raw_map" }
serde = { workspace = true }
serde_json = { workspace = true }
osm2streets = { git = "https://github.com/a-b-street/osm2streets" }
structopt = { workspace = true }
thread_local = "1.1.7"
traffic_signal_data = { path = "../traffic_signal_data" }
