[package]
name = "osm_viewer"
version = "0.1.0"
authors = ["Dustin Carlino <dabreegster@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = ["map_gui/native", "widgetry/native-backend"]
wasm = ["getrandom/js", "map_gui/wasm", "wasm-bindgen", "widgetry/wasm-backend"]

[dependencies]
abstio = { path = "../abstio" }
abstutil = { path = "../abstutil" }
geom = { path = "../geom" }
getrandom = { version = "0.2.3", optional = true }
map_gui = { path = "../map_gui" }
map_model = { path = "../map_model" }
wasm-bindgen = { version = "0.2.70", optional = true }
widgetry = { path = "../widgetry" }
