[package]
name = "parking_mapper"
version = "0.1.0"
authors = ["Dustin Carlino <dabreegster@gmail.com>"]
edition = "2018"

[features]
default = ["map_gui/native", "reqwest", "widgetry/native-backend"]

[dependencies]
abstio = { path = "../abstio" }
abstutil = { path = "../abstutil" }
anyhow = "1.0.37"
geom = { path = "../geom" }
map_gui = { path = "../map_gui" }
map_model = { path = "../map_model" }
reqwest = { version = "0.10.10", optional = true, default-features=false, features=["blocking", "rustls-tls"] }
widgetry = { path = "../widgetry" }
xmltree = "0.10.1"
