[package]
name = "piggyback"
version = "0.1.0"
authors = ["Dustin Carlino <dabreegster@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
wasm = ["getrandom/js", "js-sys", "map_gui/wasm", "wasm-bindgen", "web-sys", "widgetry/wasm-backend"]

[dependencies]
abstio = { path = "../abstio" }
abstutil = { path = "../abstutil" }
geom = { path = "../geom" }
getrandom = { workspace = true, optional = true }
js-sys = { version = "0.3.51", optional = true }
log = { workspace = true }
map_gui= { path = "../map_gui" }
map_model = { path = "../map_model" }
sim = { path = "../sim" }
wasm-bindgen = { workspace = true, optional = true }
web-sys = { workspace = true, optional = true }
widgetry = { path = "../widgetry" }
