[package]
name = "popdat"
version = "0.1.0"
authors = ["Dustin Carlino <dabreegster@gmail.com>"]
edition = "2021"

[dependencies]
abstio = { path = "../abstio" }
abstutil = { path = "../abstutil" }
anyhow = "1.0.38"
flatgeobuf = { version = "0.5" }
futures = "0.3.12"
geo = "0.20.1"
geojson = { version = "0.22.2", features = ["geo-types"] }
geom = { path = "../geom" }
geozero = "0.7"
log = "0.4.14"
map_model = { path = "../map_model" }
rand = "0.8.3"
rand_distr = "0.4.0"
rand_xorshift = "0.3.0"
geo-booleanop = "0.3.2"
serde = "1.0.123"
serde_json = "1.0.61"
sim = { path = "../sim" }
synthpop = { path = "../synthpop" }
