[package]
name = "popdat"
version = "0.1.0"
authors = ["Dustin Carlino <dabreegster@gmail.com>"]
edition = "2021"

[dependencies]
abstio = { path = "../abstio" }
abstutil = { path = "../abstutil" }
anyhow = "1.0.38"
futures = "0.3.12"
geo = "0.22.0"
geojson = { version = "0.23.0", features = ["geo-types"] }
geom = { path = "../geom" }
geozero = "0.9.5"
log = "0.4.14"
map_model = { path = "../map_model" }
rand = "0.8.3"
rand_distr = "0.4.0"
rand_xorshift = "0.3.0"
serde = "1.0.123"
serde_json = "1.0.61"
sim = { path = "../sim" }
synthpop = { path = "../synthpop" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
flatgeobuf = { version = "0.8.0" }
