[package]
name = "popdat"
version = "0.1.0"
authors = ["Dustin Carlino <dabreegster@gmail.com>"]
edition = "2021"

[dependencies]
abstio = { path = "../abstio" }
abstutil = { path = "../abstutil" }
anyhow = { workspace = true }
flatgeobuf = { version = "3.25.0" }
futures = { workspace = true }
geo = { workspace = true }
geojson = { workspace = true }
geom = { workspace = true }
geozero = "0.9.9"
log = { workspace = true }
map_model = { path = "../map_model" }
rand = { workspace = true }
rand_distr = "0.4.3"
rand_xorshift = { workspace = true }
serde = { workspace = true, features=["derive"] }
serde_json = { workspace = true }
sim = { path = "../sim" }
synthpop = { path = "../synthpop" }
